# qsync

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  auth.cpp  client.cpp  client.h  design.txt  fileinfo.capnp  files.cpp  files.h  filesystem.cpp  filesystem.h  qsync.cpp  qsync.h  server.cpp  server.h  threadpool.h  vector_stream.cpp  vector_stream.h
src/: auth.rs  deltas.rs  files.rs  main.rs  server.rs
